objects/VPPSR_Vehicle_Detail__c.object
<CustomObject>
    <fields>
        <fullName>NevdisData__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NevdisData</label>
        <referenceTo>VPPSR_NevdisData__c</referenceTo>
        <relationshipName>Vehicle_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jurisdiction_Participation__c</fullName>
        <label>jurisdiction Participation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jurisdiction__c</fullName>
        <label>jurisdiction</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VPPSR Vehicle Detail</label>
    <nameField>
        <displayFormat>VVN-{0000000}</displayFormat>
        <label>Vehicle Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VPPSR Vehicle Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>